--- a/app/src/main/res/layout/activity_pet.xml
+++ b/app/src/main/res/layout/activity_pet.xml
@@ -99,6 +99,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:textColor="@android:color/black"
+                            android:focusable="false"
                             android:text="@={ viewModel.mApproxDOB }"
                             android:inputType="text" />
                     </com.google.android.material.textfield.TextInputLayout>
