--- a/app/src/main/res/layout/residences.xml
+++ b/app/src/main/res/layout/residences.xml
@@ -103,11 +103,13 @@
             </LinearLayout>
         </LinearLayout>
         <ListView
-            android:id="@+id/result_residencess"
+            android:id="@+id/result_residences"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/general_padding"
-            app:layout_constraintTop_toBottomOf="@id/search_menu">
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@id/search_menu"
+            android:paddingLeft="@dimen/general_padding"
+            android:paddingRight="@dimen/general_padding"
+            app:layout_constraintBottom_toBottomOf="parent">
 
         </ListView>
 
