--- a/app/src/main/res/layout-land/activity_view_resident.xml
+++ b/app/src/main/res/layout-land/activity_view_resident.xml
@@ -85,7 +85,7 @@
                             android:layout_height="wrap_content"
                             android:textColor="@android:color/black"
                             android:text="@={ viewModel.mAddress }"
-                            android:inputType="text" />
+                            android:inputType="textMultiLine" />
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <com.google.android.material.textfield.TextInputLayout
@@ -119,7 +119,7 @@
                             android:layout_height="wrap_content"
                             android:textColor="@android:color/black"
                             android:text="@={ viewModel.mNotes }"
-                            android:inputType="text" />
+                            android:inputType="textMultiLine" />
                     </com.google.android.material.textfield.TextInputLayout>
 
                 </LinearLayout>
