--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#71a4f7</color>
@@ -14,4 +14,13 @@
     <color name="light_bg">#aec9f5</color>
 
     <color name="red">#FF0000</color>
+
+
+    <color name="mtrl_textinput_default_box_stroke_color" tools:override="true">#3F51B5</color>
+    <color name="mtrl_textinput_disabled_color" tools:override="true">#919191</color>
+
+    <color name="test_pink">#FF00FF</color>
+    <color name="test_green">#00FF00</color>
+    <color name="test_yellow">#FFFF00</color>
+
 </resources>
