--- a/app/src/main/res/layout/activity_view_resident.xml
+++ b/app/src/main/res/layout/activity_view_resident.xml
@@ -129,18 +129,31 @@
                 android:layout_height="0dp"
                 android:layout_weight="40"
                 android:layout_margin="@dimen/general_padding">
-                <TextView
-                    android:id="@+id/animals_title"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/search_res_animals"/>
+                    android:orientation="horizontal">
+                    <TextView
+                        android:id="@+id/animals_title"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:text="@string/search_res_animals"
+                        android:layout_weight="1"/>
+
+                    <Button
+                        android:id="@+id/add_pet_button"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/add_pet"
+                        android:drawableLeft="@drawable/add_pet"
+                        android:drawableStart="@drawable/add_pet" />
+                </LinearLayout>
 
                 <!--This list allows the user to navigate to differnt animals if NOT in edit-->
                 <com.google.android.flexbox.FlexboxLayout
                     android:id="@+id/animal_nav_list"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-
                     app:flexWrap="wrap"/>
 
                 <ListView
@@ -148,8 +161,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:divider="?attr/dividerHorizontal"
-                    android:visibility="gone">
-                </ListView>
+                    android:visibility="gone"/>
             </LinearLayout>
         </LinearLayout>
 
