--- a/app/src/main/res/layout-land/activity_view_resident.xml
+++ b/app/src/main/res/layout-land/activity_view_resident.xml
@@ -135,6 +135,7 @@
             app:layout_constraintStart_toStartOf="@+id/mid_line"
             app:layout_constraintLeft_toLeftOf="@+id/mid_line"
             app:layout_constraintEnd_toEndOf="parent"
+            android:clipChildren="false"
             android:layout_margin="@dimen/small_padding">
             <LinearLayout
                 android:layout_width="match_parent"
@@ -163,6 +164,8 @@
                 android:id="@+id/animal_nav_list"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:clipChildren="false"
+                android:clipToPadding="false"
                 app:layout_constraintTop_toBottomOf="@id/pet_title_area"
                 app:layout_constraintStart_toEndOf="@+id/mid_line"
                 app:layout_constraintEnd_toEndOf="parent"
