--- a/app/src/main/res/layout/activity_view_resident.xml
+++ b/app/src/main/res/layout/activity_view_resident.xml
@@ -128,6 +128,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="40"
+                android:clipChildren="false"
                 android:layout_margin="@dimen/general_padding">
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -155,6 +156,8 @@
                     android:id="@+id/animal_nav_list"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:clipChildren="false"
+                    android:clipToPadding="false"
                     app:flexWrap="wrap"/>
 
                 <ListView
