--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -17,5 +17,6 @@
     <dimen name="dialog_warning_guide_line">50dp</dimen>
     <dimen name="small_padding">5dp</dimen>
     <dimen name="text_gap">5dp</dimen>
+    <dimen name="pet_gap">5dp</dimen>
 
 </resources>
