--- a/app/src/main/res/menu/edit_menu.xml
+++ b/app/src/main/res/menu/edit_menu.xml
@@ -12,4 +12,10 @@
         app:showAsAction="always"
         android:icon="@drawable/baseline_edit_white_24"
         />
+    <item
+        android:id="@+id/delete"
+        android:title="Permanently Delete"
+        app:showAsAction="never"
+        android:icon="@drawable/baseline_edit_white_24"
+        />
 </menu>
