Removed welfare id from search result display.

--- a/app/src/main/res/layout/content_pet_search_entry.xml
+++ b/app/src/main/res/layout/content_pet_search_entry.xml
@@ -53,20 +53,6 @@
             android:layout_height="wrap_content" />
     </LinearLayout>
 
-    <LinearLayout android:orientation="horizontal"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/search_pet_welfare_res"
-            android:textStyle="bold"
-            android:layout_marginEnd="@dimen/text_gap"
-            android:layout_marginRight="@dimen/text_gap"/>
-        <TextView
-            android:id="@+id/pet_welfare_no"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
+    <!--TODO: Add gender and sterilised-->
 
 </LinearLayout>
