--- a/app/src/main/res/drawable/checkbox_button_background.xml
+++ b/app/src/main/res/drawable/checkbox_button_background.xml
@@ -1,5 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_enabled="false" android:state_checked="false">
+        <shape
+            android:shape="rectangle" android:padding="10dp">
+            <solid android:color="@color/disabledGreyLight"/>
+            <stroke android:width="2px" android:color="@color/disabledGreyLight"/>
+            <corners
+                android:bottomRightRadius="5dp"
+                android:bottomLeftRadius="5dp"
+                android:topLeftRadius="5dp"
+                android:topRightRadius="5dp"/>
+        </shape>
+    </item>
+    <item android:state_enabled="false" android:state_checked="true">
+        <shape
+            android:shape="rectangle" android:padding="10dp">
+            <solid android:color="@color/disabledGrey"/>
+            <stroke android:width="2px" android:color="@color/disabledGrey"/>
+            <corners
+                android:bottomRightRadius="5dp"
+                android:bottomLeftRadius="5dp"
+                android:topLeftRadius="5dp"
+                android:topRightRadius="5dp"/>
+        </shape>
+    </item>
+
     <item android:state_checked="true">
         <shape
             android:shape="rectangle" android:padding="10dp">
@@ -37,4 +62,5 @@
                 android:topRightRadius="5dp"/>
         </shape>
     </item>
+
 </selector>
