--- a/app/src/main/res/layout/activity_pet.xml
+++ b/app/src/main/res/layout/activity_pet.xml
@@ -102,7 +102,7 @@
                             android:id="@+id/all_check"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:text="@string/all"
+                            android:text="@string/unknown"
                             android:layout_weight="1"
                             android:background="@drawable/checkbox_button_background"
                             android:textColor="@android:color/white"
@@ -149,6 +149,69 @@
                             android:onClick="@{()->viewModel.setGender(viewModel.GENDER_FEMALE)}"/>
                     </RadioGroup>
 
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/search_pet_sterilised_res"/>
+                    <RadioGroup
+                        android:id="@+id/selection_sterilised"
+                        app:layout_constraintTop_toBottomOf="@id/title"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:paddingBottom="10dp">
+
+                        <androidx.appcompat.widget.AppCompatRadioButton
+                            android:id="@+id/all_check_sterilised"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:text="@string/unknown"
+                            android:layout_weight="1"
+                            android:background="@drawable/checkbox_button_background"
+                            android:textColor="@android:color/white"
+                            android:button="@null"
+                            android:padding="@dimen/button_padding"
+                            android:gravity="center_horizontal"
+                            android:checked="@{viewModel.mSterilised.equals(viewModel.STERILISED_UNKNOWN)}"
+                            android:onClick="@{()->viewModel.setSterilised(viewModel.STERILISED_UNKNOWN)}"/>
+
+                        <Space
+                            android:layout_width="8dp"
+                            android:layout_height="1dp" />
+
+                        <androidx.appcompat.widget.AppCompatRadioButton
+                            android:id="@+id/yes_check"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:text="@string/yes"
+                            android:layout_weight="1"
+                            android:background="@drawable/checkbox_button_background"
+                            android:textColor="@android:color/white"
+                            android:button="@null"
+                            android:padding="@dimen/button_padding"
+                            android:gravity="center_horizontal"
+                            android:checked="@{viewModel.mSterilised.equals(viewModel.STERILISED_YES)}"
+                            android:onClick="@{()->viewModel.setSterilised(viewModel.STERILISED_YES)}"/>
+
+                        <Space
+                            android:layout_width="8dp"
+                            android:layout_height="1dp" />
+
+                        <androidx.appcompat.widget.AppCompatRadioButton
+                            android:id="@+id/no_check"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:text="@string/no"
+                            android:layout_weight="1"
+                            android:background="@drawable/checkbox_button_background"
+                            android:textColor="@android:color/white"
+                            android:button="@null"
+                            android:padding="@dimen/button_padding"
+                            android:gravity="center_horizontal"
+                            android:checked="@{viewModel.mSterilised.equals(viewModel.STERILISED_NO)}"
+                            android:onClick="@{()->viewModel.setSterilised(viewModel.STERILISED_NO)}"/>
+                    </RadioGroup>
+
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/dob_container"
                         android:layout_width="match_parent"
@@ -166,8 +229,6 @@
                             android:text="@={ viewModel.mApproxDOB }"
                             android:inputType="text" />
                     </com.google.android.material.textfield.TextInputLayout>
-
-                    <!--Gender sterilised and description-->
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/notes_container"
@@ -219,10 +280,10 @@
                             android:inputType="textMultiLine" />
                     </com.google.android.material.textfield.TextInputLayout>
 
-                   <TextView
-                       android:text="@string/curr_res"
-                       android:layout_width="wrap_content"
-                       android:layout_height="wrap_content" />
+                    <TextView
+                        android:text="@string/curr_res"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
 
                     <Button
                         android:id="@+id/nav_res"
