--- a/app/src/main/res/layout/residences.xml
+++ b/app/src/main/res/layout/residences.xml
@@ -36,123 +36,130 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 
-        <LinearLayout
-            android:id="@+id/search_menu"
+        <ScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="@dimen/general_padding"
+            android:id="@+id/scoll"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:background="@color/light_bg"
-            android:orientation="vertical">
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/search_address"
-                android:layout_marginBottom="@dimen/general_padding"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/address"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@={ viewModel.mResidenceAddressSearch }"
-                    android:inputType="text" />
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/search_shack"
-                android:layout_marginBottom="@dimen/general_padding"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/shack"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@={ viewModel.mShackIDSearch }"
-                    android:inputType="text" />
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/search_res_name"
-                android:layout_marginBottom="@dimen/general_padding"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/res_name"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@={ viewModel.mResidentNameSearch }"
-                    android:inputType="text" />
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/search_res_id"
-                android:layout_marginBottom="@dimen/general_padding"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/res_id"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@={ viewModel.mIDNumber }"
-                    android:inputType="text" />
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/search_res_tel"
-                android:layout_marginBottom="@dimen/general_padding"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/res_tel"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@={ viewModel.mTelSearch }"
-                    android:inputType="text" />
-            </com.google.android.material.textfield.TextInputLayout>
-
+            app:layout_constraintStart_toStartOf="parent">
             <LinearLayout
-                android:orientation="horizontal"
+                android:id="@+id/search_menu"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <Button
-                    android:id="@+id/search_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/search"
-                    android:drawableLeft="@android:drawable/ic_menu_search"
-                    android:drawableStart="@android:drawable/ic_menu_search"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_weight="1"/>
+                android:layout_height="wrap_content"
+                android:padding="@dimen/general_padding"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:background="@color/light_bg"
+                android:orientation="vertical">
 
-                <Space
-                    android:layout_width="5dp"
-                    android:layout_height="1dp" />
-
-                <Button
-                    android:id="@+id/cancel_button"
-                    android:layout_width="wrap_content"
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/cancel"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_weight="1"/>
+                    android:hint="@string/search_address"
+                    android:layout_marginBottom="@dimen/general_padding"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/address"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@={ viewModel.mResidenceAddressSearch }"
+                        android:inputType="text" />
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/search_shack"
+                    android:layout_marginBottom="@dimen/general_padding"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/shack"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@={ viewModel.mShackIDSearch }"
+                        android:inputType="text" />
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/search_res_name"
+                    android:layout_marginBottom="@dimen/general_padding"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/res_name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@={ viewModel.mResidentNameSearch }"
+                        android:inputType="text" />
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/search_res_id"
+                    android:layout_marginBottom="@dimen/general_padding"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/res_id"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@={ viewModel.mIDNumber }"
+                        android:inputType="number" />
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/search_res_tel"
+                    android:layout_marginBottom="@dimen/general_padding"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/res_tel"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@={ viewModel.mTelSearch }"
+                        android:inputType="number" />
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <Button
+                        android:id="@+id/search_button"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/search"
+                        android:drawableLeft="@android:drawable/ic_menu_search"
+                        android:drawableStart="@android:drawable/ic_menu_search"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_weight="1"/>
+
+                    <Space
+                        android:layout_width="5dp"
+                        android:layout_height="1dp" />
+
+                    <Button
+                        android:id="@+id/cancel_button"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/cancel"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_weight="1"/>
+                </LinearLayout>
             </LinearLayout>
-        </LinearLayout>
+        </ScrollView>
         <ListView
             android:id="@+id/result_residences"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@id/search_menu"
+            app:layout_constraintTop_toBottomOf="@id/scoll"
             android:paddingLeft="@dimen/general_padding"
             android:paddingRight="@dimen/general_padding"
             app:layout_constraintBottom_toBottomOf="parent">
@@ -165,7 +172,7 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/search_menu"
+            app:layout_constraintTop_toBottomOf="@id/scoll"
             android:padding="@dimen/general_padding">
             <ImageView
                 android:layout_width="wrap_content"
