--- a/app/src/main/res/layout/content_residence_search_entry.xml
+++ b/app/src/main/res/layout/content_residence_search_entry.xml
@@ -43,12 +43,12 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/search_latitude"
+            android:text="@string/search_resident_name"
             android:textStyle="bold"
             android:layout_marginEnd="@dimen/text_gap"
             android:layout_marginRight="@dimen/text_gap"/>
         <TextView
-            android:id="@+id/lat"
+            android:id="@+id/resident_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
@@ -59,12 +59,28 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/search_longitude"
+            android:text="@string/search_resident_id"
             android:textStyle="bold"
             android:layout_marginEnd="@dimen/text_gap"
             android:layout_marginRight="@dimen/text_gap"/>
         <TextView
-            android:id="@+id/lon"
+            android:id="@+id/resident_id"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
+    <LinearLayout android:orientation="horizontal"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/search_resident_tel"
+            android:textStyle="bold"
+            android:layout_marginEnd="@dimen/text_gap"
+            android:layout_marginRight="@dimen/text_gap"/>
+        <TextView
+            android:id="@+id/resident_tel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
