Display new Resident params. Not savable yet.

--- a/app/src/main/res/layout/activity_view_resident.xml
+++ b/app/src/main/res/layout/activity_view_resident.xml
@@ -61,7 +61,6 @@
                     <LinearLayout
                         android:id="@+id/data_container"
                         android:orientation="vertical"
-                        xmlns:tools="http://schemas.android.com/tools"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         app:layout_constraintTop_toTopOf="parent">
@@ -100,6 +99,61 @@
                                 android:text="@={ viewModel.mShackID }"
                                 android:inputType="text" />
                         </com.google.android.material.textfield.TextInputLayout>
+
+                        <com.google.android.material.textfield.TextInputLayout
+                            android:id="@+id/resident_container"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:hint="@string/search_res_name"
+                            android:layout_marginBottom="@dimen/general_padding"
+                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
+
+                            <com.google.android.material.textfield.TextInputEditText
+                                android:id="@+id/res_name"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:maxLines="5"
+                                android:textColor="@android:color/black"
+                                android:text="@={ viewModel.mResidentName }"
+                                android:inputType="text" />
+                        </com.google.android.material.textfield.TextInputLayout>
+
+                        <com.google.android.material.textfield.TextInputLayout
+                            android:id="@+id/resident_id_container"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:hint="@string/search_res_id"
+                            android:layout_marginBottom="@dimen/general_padding"
+                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
+
+                            <com.google.android.material.textfield.TextInputEditText
+                                android:id="@+id/res_id"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:maxLines="5"
+                                android:textColor="@android:color/black"
+                                android:text="@={ viewModel.mResidentID }"
+                                android:inputType="number" />
+                        </com.google.android.material.textfield.TextInputLayout>
+
+                        <com.google.android.material.textfield.TextInputLayout
+                            android:id="@+id/resident_tel_container"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:hint="@string/search_res_tel"
+                            android:layout_marginBottom="@dimen/general_padding"
+                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
+
+                            <com.google.android.material.textfield.TextInputEditText
+                                android:id="@+id/res_tel"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:maxLines="5"
+                                android:textColor="@android:color/black"
+                                android:text="@={ viewModel.mResidentTel }"
+                                android:inputType="number" />
+                        </com.google.android.material.textfield.TextInputLayout>
+
 
                         <com.google.android.material.textfield.TextInputLayout
                             android:id="@+id/notes_container"
