--- a/app/src/main/res/layout/activity_view_resident.xml
+++ b/app/src/main/res/layout/activity_view_resident.xml
@@ -18,7 +18,7 @@
                 android:id="@+id/scroller"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="60">
+                android:layout_weight="1">
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -180,8 +180,7 @@
                 android:orientation="vertical"
                 android:id="@+id/ani_cont"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="40"
+                android:layout_height="wrap_content"
                 android:layout_margin="@dimen/general_padding">
                 <LinearLayout
                     android:layout_width="match_parent"
