--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,5 +18,6 @@
     <dimen name="small_padding">5dp</dimen>
     <dimen name="text_gap">5dp</dimen>
     <dimen name="pet_gap">5dp</dimen>
+    <dimen name="snip_size">10dp</dimen>
 
 </resources>
