--- a/app/src/main/res/values/settings.xml
+++ b/app/src/main/res/values/settings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="kBaseUrl">http://129.232.178.242/welfare-rest-api/</string>
+<!--    <string name="kBaseUrl">http://129.232.178.242/welfare-rest-api/</string>-->
+    <string name="kBaseUrl">http://192.168.1.153:8888/welfare-rest-api/</string>
 </resources>
